--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -14,9 +16,10 @@
                     <children>
                         <ToolBar nodeOrientation="LEFT_TO_RIGHT" orientation="VERTICAL" prefHeight="678.0" prefWidth="158.0">
                             <items>
-                                <Button mnemonicParsing="false" onAction="#btn_vagas" prefHeight="35.0" prefWidth="165.0" text="Lista Vagas" textFill="WHITE" />
+                                <Button mnemonicParsing="false" onAction="#btn_vagas" prefHeight="35.0" prefWidth="165.0" text="Listar Vagas" textFill="WHITE" />
+                        <Button mnemonicParsing="false" onAction="#btn_RegistrarVaga" prefHeight="35.0" prefWidth="165.0" text="Registrar Vagas" textFill="WHITE" />
                                 <Button mnemonicParsing="false" onAction="#btn_candidatos" prefHeight="35.0" prefWidth="165.0" text="Listar Candidatos" textFill="WHITE" />
-                                <Separator orientation="VERTICAL" prefHeight="520.0" visible="false" />
+                                <Separator orientation="VERTICAL" prefHeight="397.0" prefWidth="0.0" visible="false" />
                                 <Button fx:id="btn_sair" mnemonicParsing="false" onAction="#onClickSair" prefHeight="35.0" prefWidth="165.0" text="Sair" textFill="WHITE" />
                             </items>
                         </ToolBar>
@@ -34,7 +37,7 @@
                                 <Separator orientation="VERTICAL" prefHeight="15.0" visible="false" />
                                 <AnchorPane prefHeight="656.0" prefWidth="1031.0">
                                     <children>
-                                        <AnchorPane fx:id="tab_candidatos" prefHeight="639.0" prefWidth="1031.0">
+                                        <AnchorPane fx:id="tab_candidatos" prefHeight="639.0" prefWidth="1031.0" visible="false">
                                             <children>
                                                 <TableView fx:id="tabCandidatos" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="618.0" prefWidth="1031.0">
                                                     <columns>
@@ -43,18 +46,26 @@
                                                         <TableColumn fx:id="colEmail" editable="false" minWidth="-Infinity" prefWidth="348.0" resizable="false" text="Email" />
                                                         <TableColumn fx:id="colFormacao" editable="false" minWidth="-Infinity" prefWidth="151.0" resizable="false" text="Formação" />
                                                     </columns>
+                                       <contextMenu>
+                                          <ContextMenu>
+                                            <items>
+                                              <MenuItem mnemonicParsing="false" text="Editar" />
+                                                <MenuItem mnemonicParsing="false" text="Excluir" />
+                                            </items>
+                                          </ContextMenu>
+                                       </contextMenu>
                                                 </TableView>
                                             </children>
                                         </AnchorPane>
                                         <AnchorPane fx:id="tab_vagas" layoutY="-1.0" prefHeight="639.0" prefWidth="1031.0" visible="false">
                                             <children>
-                                                <TableView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="618.0" prefWidth="1031.0">
+                                                <TableView fx:id="tabVagas" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="618.0" prefWidth="1031.0">
                                                     <columns>
-                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="289.0" resizable="false" text="Vaga" />
-                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="218.0" resizable="false" text="Numero de Vagas" />
-                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="168.0" resizable="false" text="Candidatos" />
-                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="199.0" resizable="false" text="Codigo da Vaga" />
-                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="139.0" resizable="false" text="Status" />
+                                                        <TableColumn fx:id="colVaga" editable="false" minWidth="-Infinity" prefWidth="289.0" resizable="false" text="Vaga" />
+                                                        <TableColumn fx:id="colDepartamento" editable="false" minWidth="-Infinity" prefWidth="218.0" resizable="false" text="Departamento" />
+                                                        <TableColumn fx:id="colNumCandidatos" editable="false" minWidth="-Infinity" prefWidth="168.0" resizable="false" text="Candidatos" />
+                                                        <TableColumn fx:id="colCodigo" editable="false" minWidth="-Infinity" prefWidth="199.0" resizable="false" text="Codigo da Vaga" />
+                                                        <TableColumn fx:id="colStatus" editable="false" minWidth="-Infinity" prefWidth="139.0" resizable="false" text="Status" />
                                                     </columns>
                                                     <columnResizePolicy>
                                                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -62,6 +73,73 @@
                                                 </TableView>
                                             </children>
                                         </AnchorPane>
+                              <AnchorPane fx:id="tab_RegistrarVaga" prefHeight="639.0" prefWidth="1031.0" visible="false">
+                                 <children>
+                                    <VBox alignment="CENTER" layoutX="29.0" layoutY="95.0" prefHeight="450.0" prefWidth="316.0">
+                                       <children>
+                                          <Label alignment="CENTER" prefHeight="71.0" prefWidth="354.0" text="Vaga" textFill="#2f2a4f">
+                                             <font>
+                                                <Font name="Arial Black" size="48.0" />
+                                             </font>
+                                          </Label>
+                                          <Label alignment="TOP_CENTER" prefHeight="32.0" prefWidth="246.0" text="Insira as informações">
+                                             <font>
+                                                <Font name="Arial" size="20.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </VBox>
+                                    <VBox alignment="CENTER" layoutX="571.0" layoutY="130.0" maxHeight="-Infinity" prefHeight="286.0" prefWidth="357.0">
+                                       <children>
+                                          <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+                                          <HBox alignment="CENTER">
+                                             <children>
+                                                <Label minWidth="-Infinity" prefWidth="150.0" text="Regime de Contratação">
+                                                   <font>
+                                                      <Font name="Arial Bold" size="13.0" />
+                                                   </font>
+                                                   <HBox.margin>
+                                                      <Insets left="20.0" />
+                                                   </HBox.margin>
+                                                </Label>
+                                                <Separator prefWidth="100.0" visible="false" />
+                                                <ChoiceBox fx:id="choiceRegime" prefWidth="150.0">
+                                                   <HBox.margin>
+                                                      <Insets right="20.0" />
+                                                   </HBox.margin>
+                                                </ChoiceBox>
+                                             </children>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
+                                          </HBox>
+                                          <Separator orientation="VERTICAL" prefHeight="10.0" visible="false" />
+                                          <TextField fx:id="txtCargo" minHeight="-Infinity" prefHeight="30.0" promptText="Cargo" styleClass="lineedit" />
+                                          <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+                                          <TextField fx:id="txtSalario" minHeight="-Infinity" prefHeight="30.0" promptText="Salário" styleClass="lineedit" />
+                                          <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+                                          <TextField fx:id="txtDepartamento" minHeight="-Infinity" prefHeight="30.0" promptText="Departamento" styleClass="lineedit" />
+                                          <Separator fx:id="separator_formacao" orientation="VERTICAL" prefHeight="200.0" visible="false" />
+                                          <TextField fx:id="txtRequisitos" minHeight="-Infinity" prefHeight="30.0" promptText="Requisitos" styleClass="lineedit" />
+                                          <Label fx:id="error_message" />
+                                          <TextField fx:id="ld_formacao_cadastro" minHeight="-Infinity" prefHeight="30.0" promptText="Formação" styleClass="lineedit" visible="false" />
+                                          <Separator minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="20.0" visible="false" />
+                                          <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+                                          <Label fx:id="mensagem_erro2" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="355.0" textFill="#e41111">
+                                             <font>
+                                                <Font name="System Bold" size="12.0" />
+                                             </font>
+                                          </Label>
+                                          <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="66.0" prefWidth="200.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" onAction="#onClickRegistrarVaga" prefHeight="40.0" prefWidth="120.0" styleClass="btn_entrar" text="Registrar" textFill="WHITE" />
+                                                <Separator prefWidth="40.0" visible="false" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </AnchorPane>
                                     </children>
                                 </AnchorPane>
                             </children>
